--- a/CodeFirstCarInsurance/CodeFirstCarInsurance/CodeFirstCarInsurance.csproj
+++ b/CodeFirstCarInsurance/CodeFirstCarInsurance/CodeFirstCarInsurance.csproj
@@ -183,6 +183,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdminsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\InsuranceQualificationsController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -193,8 +194,13 @@
     <Compile Include="Migrations\202101211933068_CreateInsuranceQualificationTable.Designer.cs">
       <DependentUpon>202101211933068_CreateInsuranceQualificationTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202101260113098_CreatedAdmin.cs" />
+    <Compile Include="Migrations\202101260113098_CreatedAdmin.Designer.cs">
+      <DependentUpon>202101260113098_CreatedAdmin.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Admin.cs" />
     <Compile Include="Models\CarInsuranceDBContext.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\InsuranceQualification.cs" />
@@ -265,6 +271,11 @@
     <Content Include="Views\InsuranceQualifications\Index.cshtml" />
     <Content Include="Views\InsuranceQualifications\NotQualified.cshtml" />
     <Content Include="Views\InsuranceQualifications\Qualified.cshtml" />
+    <Content Include="Views\Admins\Create.cshtml" />
+    <Content Include="Views\Admins\Delete.cshtml" />
+    <Content Include="Views\Admins\Details.cshtml" />
+    <Content Include="Views\Admins\Edit.cshtml" />
+    <Content Include="Views\Admins\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -285,6 +296,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202101211933068_CreateInsuranceQualificationTable.resx">
       <DependentUpon>202101211933068_CreateInsuranceQualificationTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202101260113098_CreatedAdmin.resx">
+      <DependentUpon>202101260113098_CreatedAdmin.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
